test/sema/struct_member_redeclared.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: i32,
  x: i32,
  // CHECK: [[# @LINE - 1 ]]:3: error: member 'x' is already declared
}

fn main() -> void {}
